scrollbar bug fix

--- a/src/app/components/molecules/body-selection/body-selection.component.scss
+++ b/src/app/components/molecules/body-selection/body-selection.component.scss
@@ -46,8 +46,6 @@
             background-color: grey;
 
             overflow-y: auto;
-            scrollbar-width: thin;
-            scrollbar-color: black #f1f1f1;
 
             &::-webkit-scrollbar {
                 width: 5px;
