--- a/src/app/components/molecules/side-bar/side-bar.component.scss
+++ b/src/app/components/molecules/side-bar/side-bar.component.scss
@@ -28,7 +28,6 @@ section {
     }
 
     overflow-y: auto;
-    scrollbar-color: grey #f1f1f1;
     direction: rtl;
 
     &::-webkit-scrollbar {
